--- a/css/style.css
+++ b/css/style.css
@@ -163,7 +163,7 @@ nav {
 }
 .about-text h2 {
   font-size: 3rem;
-  color: #ff1493;
+  color: #292929;
   font-weight: 400;
 }
 .about-text h1,
@@ -209,7 +209,21 @@ h2 {
   align-items: center;
   justify-content: center;
   padding-top: 40px;
+  background-color: #ffc0cb;
+  padding-bottom: 3%;
+}
+#volunteering {
+  width: 100%;
+  height: 150%;
+  box-sizing: border-box;
+  font-family: calibri;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-top: 40px;
   background-color: #e6e6e6;
+  padding-bottom: 5%;
 }
 .p-heading h1 {
   color: #292929;
@@ -309,7 +323,40 @@ h2 {
   transform: translateY(-10px);
   transition: all ease 0.3s;
 }
-#portfolio {
+#technologies {
+  width: auto;
+  height: 100%;
+  box-sizing: border-box;
+  font-family: calibri;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 60px 2% 20px 2%;
+  background-color: #e6e6e6;
+  padding-bottom: 5%;
+}
+.p-container-tech {
+  width: 90%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto auto;
+  grid-gap: 10px;
+}
+.p-box-tech {
+  background-color: #ffc0cb;
+  overflow: hidden;
+  border-radius: 10px;
+  box-shadow: 2px 2px 13px rgba(0, 0, 0, 0.3);
+  position: relative;
+}
+.p-box-tech img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+#WorkExperience {
   width: 100%;
   box-sizing: border-box;
   font-family: calibri;
@@ -318,10 +365,42 @@ h2 {
   align-items: center;
   justify-content: center;
   padding: 60px 2% 20px 2%;
+  background-color: #ffc0cb;
+  padding-bottom: 5%;
 }
-
-.p-headind {
+.overlay-text-work {
   font-family: calibri;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: #e6e6e6;
+  display: none;
+}
+.overlay-text-work h1,
+p {
+  color: black;
+}
+.overlay-text-work h1 {
+  font-size: 1.5rem;
+  margin: 0px;
+  padding: 0px;
+  letter-spacing: 2px;
+}
+.overlay-text-work p {
+  font-size: 1rem;
+  margin: 0px;
+}
+.p-box:hover .overlay-text-work {
+  display: flex;
+}
+.p-headind {
+  /* font-family: calibri;
   font-size: 1.7rem;
   text-align: center;
   color: #ffffff;
@@ -330,7 +409,11 @@ h2 {
   background-color: #292929;
   letter-spacing: 2px;
   border-radius: 3px;
-  box-shadow: 2px 2px 20px rgba(0, 0, 0, 0.1);
+  box-shadow: 2px 2px 20px rgba(0, 0, 0, 0.1); */
+  color: #292929;
+  font-size: 3rem;
+  margin: 0px;
+  padding: 0px;
 }
 .p-box {
   background-color: #1f1f1f;
@@ -363,12 +446,12 @@ h2 {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: rgba(23, 209, 172, 0.8);
+  background-color: #ffc0cb;
   display: none;
 }
 .overlay-text h1,
 p {
-  color: #ffffff;
+  color: black;
 }
 .overlay-text h1 {
   font-size: 2.2rem;
@@ -380,9 +463,9 @@ p {
   font-size: 1.2rem;
   margin: 0px;
 }
-.p-box:hover .overlay-text {
+/* .p-box:hover .overlay-text {
   display: flex;
-}
+} */
 #contact-btn {
   width: 100%;
   display: flex;
@@ -417,7 +500,7 @@ p {
   box-shadow: 2px 5px 6px rgba(0, 0, 0, 0.2);
 }
 #contact-btn button:hover {
-  background-color: #ff1493;
+  background-color: #e6e6e6;
   color: #000000;
   transition: all ease 0.5s;
   font-weight: bold;
